--- a/dox/Test_Cases_SP3/TC34_InvalidStatusFlag.dox
+++ b/dox/Test_Cases_SP3/TC34_InvalidStatusFlag.dox
@@ -1,6 +1,6 @@
 /*!
 
-\page testcase34 Invalid Status Flags for TextRecord
+\page testcase34 Invalid Status Flags
 
 <pre>
 H:LinkTest1:0000:0003:0000:2012144,21:51:26:0001:URBAN-
