--- a/dox/Test_Cases_SP3/TC35_InvalidAll.dox
+++ b/dox/Test_Cases_SP3/TC35_InvalidAll.dox
@@ -1,6 +1,6 @@
 /*!
 
-\page testcase35 Invalid Linker,Text, and Modification Records.
+\page testcase35 Invalid Records
 
 <pre>
 H:ALT1:0004:0033:0004:2012149,16:27:08:0001:URBAN-
