--- a/dox/Test_Cases_SP4/TC51_99bottles.dox
+++ b/dox/Test_Cases_SP4/TC51_99bottles.dox
@@ -1,6 +1,6 @@
 /*!
 
-\page testcase51 99 Bottles
+\page testcase51 The 99 Bottles Song
 
 <h1>Input</h1>
 <pre><span style="font-style:italic;color:#800080;">the99bottlessong</span> <span style="font-weight:bold;color:#000080;">kicko</span> <span style="color:#0000ff;">fc</span><span style="color:#ff0000;">:</span> <span style="color:#00e1af;">0</span><span style="color:#ff0000;">;</span>
